ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 22 ::/0 any 2001:700:700:2002::/64 in
-A ufw6-user-input -p tcp --dport 22 -s 2001:700:700:2002::/64 -j ACCEPT

### tuple ### allow tcp 22 ::/0 any 2001:700:700:2002::72 in
-A ufw6-user-input -p tcp --dport 22 -s 2001:700:700:2002::72 -j ACCEPT

### tuple ### allow tcp 10050 ::/0 any 2001:700:700:2002::71 in
-A ufw6-user-input -p tcp --dport 10050 -s 2001:700:700:2002::71 -j ACCEPT

### tuple ### allow tcp 22 ::/0 any 2001:700:700:1::227 in
-A ufw6-user-input -p tcp --dport 22 -s 2001:700:700:1::227 -j ACCEPT

### tuple ### allow any any ::/0 any 2001:700:700:2002::72 in
-A ufw6-user-input -s 2001:700:700:2002::72 -j ACCEPT

### tuple ### allow tcp 10050 ::/0 any 2001:700:700:2002::70 in
-A ufw6-user-input -p tcp --dport 10050 -s 2001:700:700:2002::70 -j ACCEPT

### tuple ### allow tcp 10051 ::/0 any 2001:700:700:2002::70 in
-A ufw6-user-input -p tcp --dport 10051 -s 2001:700:700:2002::70 -j ACCEPT

### tuple ### allow tcp 22 ::/0 any 2001:700:700:2000::/64 in
-A ufw6-user-input -p tcp --dport 22 -s 2001:700:700:2000::/64 -j ACCEPT

### tuple ### allow tcp 22 ::/0 any 2001:700:700:2001::/64 in
-A ufw6-user-input -p tcp --dport 22 -s 2001:700:700:2001::/64 -j ACCEPT

### tuple ### allow tcp 22 ::/0 any 2001:700:700:2003::/64 in
-A ufw6-user-input -p tcp --dport 22 -s 2001:700:700:2003::/64 -j ACCEPT

### tuple ### allow tcp 22 ::/0 any 2001:700:700:2::33 in
-A ufw6-user-input -p tcp --dport 22 -s 2001:700:700:2::33 -j ACCEPT

### tuple ### allow tcp 22 ::/0 any 2001:700:700:27::/64 in
-A ufw6-user-input -p tcp --dport 22 -s 2001:700:700:27::/64 -j ACCEPT

### tuple ### allow tcp 22 ::/0 any 2001:700:700:1::/64 in
-A ufw6-user-input -p tcp --dport 22 -s 2001:700:700:1::/64 -j ACCEPT

### tuple ### allow udp 51238 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 51238 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
